Correct nav hover gap

--- a/cae_home/static/cae_home/css/base.css
+++ b/cae_home/static/cae_home/css/base.css
@@ -395,6 +395,7 @@ header nav {
         display: none; } }
   header nav > ul > li {
     position: relative;
+    min-height: 34px;
     padding-top: 3px;
     padding-right: 10px;
     padding-bottom: 3px;
