--- a/cae_home/static/cae_home/css/sass/_nav.scss
+++ b/cae_home/static/cae_home/css/sass/_nav.scss
@@ -79,6 +79,8 @@ header nav {
     > ul > li {
         position: relative;
 
+        min-height: 34px;
+
         padding-top: 3px;
         padding-right: 10px;
         padding-bottom: 3px;
